2005-08-02  Keith Packard  <keithp@keithp.com>

	* hw/xwin/Makefile.am:
	Mark generated files as BUILT_SOURCES and CLEANFILES
	to ensure they are regenerated after 'make clean' and
	to make parallel builds work right.

2005-08-01  Keith Packard  <keithp@keithp.com>

	* hw/dmx/config/Makefile.am:
	Note yacc and lex generated files as BUILT_SOURCES so
	they are created before anything is compiled; required
	for parallel builds

2005-07-06  Alexander Gottwald  <ago@freedesktop.org>

	* configure.ac:
	* Makefile.am:
	* include/dix-config.h:
	Add more defines for XWin DDX
	Make building of cfb*, afb and mfb conditional
	Set FD_SETSIZE=256 on cygwin
	
2005-07-05  Alexander Gottwald  <ago@freedesktop.org>

	* hw/xwin/Makefile.am:
	Build miinitext.c and fbcmap.c as DDX specific files

	* configure.ac:
	Do not define _POSIX_SOURCE on cygwin.

2005-07-05  Alexander Gottwald  <ago@freedesktop.org>

	* fb/Makefile.am:
	* mi/Makefile.am:
	* xkb/Makefile.am:
	Revert last changes. They have to be addressed in a different way

2005-07-05  Alexander Gottwald  <ago@freedesktop.org>

	* configure.ac:
	* hw/Makefile.am:
	Add XWin DDX, make Xorg DDX conditional
	Make XF86VidMode and XF86Misc conditional

	* include/xwin-config.h.in:
	* hw/xwin/Makefile.am:
	Add XWin DDX

	* include/dix-config.h.in:
	Added DDXTIME, DDXOSFATALERROR, DDXOSVERRORF and DDXBEFORERESET

	* fb/Makefile.am:
	Added fbcmap.c

	* mi/Makefile.am:
	Added miinitext.c

	* xkb/Makefile.am:
	Added -I$(top_srcdir)/Xext/extmod to INCLUDES

2005-07-02  Daniel Stone  <daniel@freedesktop.org>

	* acinclude.m4:
	* autogen.sh:
	* configure.ac:
	* **/Makefile.am:
	* xorg-server.pc.in:
	Initial build system checked in.